--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "type": "library",
     "autoload": {
         "psr-4": {
-           "Of\\": "vendor/opoink/framework/"
+           "Of\\": "vendor/"
         }
     },
     "require": {
