update composer json, add public static files checker to applicaion init

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,13 @@
         "zendframework/zendframework": "3.0.0",
         "php-di/php-di": "^5.4",
         "matthiasmullie/minify": "^1.3"
-    }
+    },
+    "authors": [
+        {
+            "name": "Ron Rome Perez",
+            "email": "ron@opoink.com",
+            "homepage": "https://www.opoink.com",
+            "role": "Founder"
+        }
+    ]
 }
