--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "laminas/laminas-db": "^2.11.2",
         "laminas/laminas-json": "^3.1.2",
         "php-di/php-di": "^5.4",
-        "matthiasmullie/minify": "^1.3",
-        "opoink/bmodule": ">0.0.0"
+        "matthiasmullie/minify": "^1.3"
     },
     "authors": [
         {
