--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laminas/laminas-db": "2.11.3",
         "laminas/laminas-json": "3.1.2",
         "php-di/php-di": "^5.4",
-        "matthiasmullie/minify": "^1.3"
+        "matthiasmullie/minify": "^1.3",
+        "opoink/router": "dev-main"
     },
     "authors": [
         {
