--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laminas/laminas-json": "3.1.2",
         "php-di/php-di": "^5.4",
         "matthiasmullie/minify": "^1.3",
-        "opoink/router": ">=1.0.0"
+        "opoink/router": ">=1.0.0",
         "opoink/template": ">=1.0.0",
         "opoink/cli": ">=1.0.0"
     },
