--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "matthiasmullie/minify": "^1.3",
         "opoink/router": ">=1.0.0",
         "opoink/template": ">1.0.1",
-        "opoink/cli": ">=1.0.0"
+        "opoink/cli": ">=1.0.0",
+		"phpmailer/phpmailer": "^6.5"
     },
     "authors": [
         {
