--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         }
     },
     "require": {
-        "php": ">=7.1.0",
-        "laminas/laminas-db": "2.11.3",
-        "laminas/laminas-json": "3.1.2",
+        "php": ">=7.3.0",
+        "laminas/laminas-db": ">=2.11.3",
+        "laminas/laminas-json": ">=3.1.2",
         "php-di/php-di": "^5.4",
         "matthiasmullie/minify": "^1.3",
         "opoink/router": ">=1.0.0",
