--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": ">=7.3.0",
         "laminas/laminas-db": ">=2.11.3",
         "laminas/laminas-json": ">=3.1.2",
-        "php-di/php-di": "^5.4",
+        "php-di/php-di": ">=6.0",
         "matthiasmullie/minify": "^1.3",
         "opoink/router": ">=1.0.0",
         "opoink/template": ">1.0.1",
